--- a/pages/前言.md
+++ b/pages/前言.md
@@ -2,6 +2,6 @@
   
   机翻用DeepL和搜狗,虽然DeepL吹的很厉害,但是大部分时候搜狗翻译的更通顺些,可能是专有名词多吧
   
-  如果只是想了解各种世界地图,可以参考 `世界地图投影 <http://michaelminn.net/tutorials/gis-projections-world/>`_ ,
+  如果只是想了解各种世界地图,可以参考[世界地图投影] ` <http://michaelminn.net/tutorials/gis-projections-world/>`_ ,
   如果想了解投影基础概念,可以看一下 `这篇介绍 <http://michaelminn.net/tutorials/gis-projections/index.html>`_
 -
