Logseq auto save

--- a/pages/前言.md
+++ b/pages/前言.md
@@ -1,4 +1,4 @@
-- {{}}
+- {{关于翻译}}
   地图投影是个很复杂的东西,网上和书本上能讲清楚的不多,这块涉及到很多数学原理和制图相关知识,枯燥而且繁复.以前网络上有一个很好的教程,即 MapProjection_ ,作者是 Carlos A. Furuti,图文并茂,特别详细,但是从19年开始网站没有维护,已经无法访问了,我最近从 archive.org 上把老版本的介绍下载了下来,准备进行翻译和整理,实际也就是先机翻在改改,肯定会有部分偏差和翻译错误,全文是第一人称,翻译中没有做修改
   
   机翻用DeepL和搜狗,虽然DeepL吹的很厉害,但是大部分时候搜狗翻译的更通顺些,可能是专有名词多吧
