--- a/pages/制图学基础知识和投影选择.md
+++ b/pages/制图学基础知识和投影选择.md
@@ -74,6 +74,10 @@
 	- ![Snipaste_2021-06-10_21-35-44.png](../assets/Snipaste_2021-06-10_21-35-44_1623332158020_0.png)
 	- 表格中展示了三种（正轴、横轴和斜轴)投影面应用于四种(方位等积、高尔立体、亚尔勃斯等积圆锥和拉格朗日)投影，蓝色表示切投影面(只给出了无限多个可能的投影面中的几个）。一些投影，如高尔立体投影，实际上可以通过透视几何得出；然而，对大多数投影来说，投影面只是说明性的：地图可以展示到一个投影面上，但不是从投影面计算出来的。
 	- 一些投影群的独特方里网（例如方位投影和圆锥投影中的径向对称子午线，圆柱形图中的矩形网格）是通过指定的投影面来实现的。尽管有一个常见的误解，但这种分类并不是排他性的：大多数投影既不涉及圆锥体，也不涉及圆柱体，但也不是方位。对已完成的地图的微旋转，比如把它侧向或倒过来，投影面和投影都将保持不变。另一方面，修改投影面既不影响所表示的区域，也不影响整个地图的形状。
+	  id:: 60c2b85d-1e02-4253-ba14-02750703c5f9
+- **投影面**
+  id:: 60c2c338-0901-4943-903d-bcaf2c3dff03
+  译注:投影面又称“地图平面”。地图投影中,地球椭球体或球体部分表面的承影平面。投影面都是可展平的面,分为平面、圆锥面、圆柱面。以平面为投影面进行投影的,称方位投影;以圆锥面为投影面投影的,称圆锥投影;以圆柱面为投影面投影的,称圆柱投影。
 - 投影的另一个关键特征是投影面相对于球面的方向。
 - 一个特定的投影可以使用多个投影面，大致由经纬网和最靠近概念投影面的球体区域定义，通常是世界地图的中心(因为变形和裁剪,不一定是实际的中心) 
   * 极地的地图将南北轴与投影系统的对齐，因此当其中一个极点必须位于地图的中心时很有用；
