--- a/pages/地图投影介绍.md
+++ b/pages/地图投影介绍.md
@@ -20,7 +20,7 @@
 		- ![image.png](../assets/image_1623302678226_0.png) [[制图学基础知识和投影选择]]
 	- 按地图目的划分投影
 		- ![image.png](../assets/image_1623303250138_0.png) [[有用的地图属性]]
-			- [[距离]]
+			- [[距离和比例尺 ]]
 			- [[测地线]]
 			- [[方向]]
 			- [[形状]]
