--- a/pages/方位投影.md
+++ b/pages/方位投影.md
@@ -1,7 +1,9 @@
 public:: true
-nextPage:: [[圆柱投影]]
-prevPage:: [[埃托夫/汉莫尔/温克尔三重投影]]
+上一页:: [[圆柱投影]]
+下一页:: [[埃托夫/汉莫尔/温克尔三重投影]]
+原链接:: [projAz](https://web.archive.org/web/20180702154259/http://progonos.com/furuti/MapProj/Normal/ProjAz/projAz.html)
 
+-
 # 简介
 - 给定表面上的一个参考点A和另外两个点B和C，从B到C的方位角是由最小距离线AB和AC(在球面上是测地线或大圆弧)形成的角度。换句话说，它代表一个人坐在A上看B为了看C必须转的角度，A到C的方位是把一个极点作为参考B的方位。
 	- ![image.png](../assets/image_1623807323969_0.png) 
@@ -99,4 +101,29 @@ prevPage:: [[埃托夫/汉莫尔/温克尔三重投影]]
 ## 等距方位投影
 - 方位等距投影能够在一张地图上呈现整个地球，并且具有恒定的径向比例（距离从投影中心线性增加），由于其重要的特点，我们在其他地方进一步讨论。
 - 以北极为投影点，方位等距作为联合国组织的旗帜和会徽的一部分而为人们所熟悉，橄榄枝代替了南极洲。这里的南极洲被 "内翻"，说明了这种投影对远离中心的形状和区域的极端扭曲。
-- 这种投影结构简单，有时被剪成单一的半球，而且常常被限制在极冠的插图上。
+- 这种投影结构简单，有时被裁切成单一的半球，而且常常被限制在极冠的插图上。
+	- **等距方位投影地图**
+	- ![image.png](../assets/image_1623833574736_0.png) 
+	  北极投影点
+	- ![image.png](../assets/image_1623833613605_0.png) 
+	  赤道投影面
+	- ![image.png](../assets/image_1623833636149_0.png) 
+	  西半球,中央经线110°W
+	- ![image.png](../assets/image_1623833673229_0.png) 
+	  东半球,中央经线70°E
+## 兰伯特方位角等面积投影
+- 像表面上相似的方位等距投影一样，约翰·兰伯特在1772年发表的方位角投影严重扭曲了世界地图边界的形状。然而，径向尺度不是恒定的:在极地方面，纬线越来越靠近边界，刚好足以保护区域。
+  构造相对简单，这种投影在各方面都频繁使用。
+  极地为投影面的兰伯特方位投影是由安东-马里奥·洛尼亚(1789年)独立设计的，并在短时间内以他的名字命名。
+### 金兹堡修正方位投影
+- 1949年，俄罗斯人Georgiy A.Ginzburg为学校地图中的半球提出了两种方位角投影。由于兰伯特的等面积投影压缩了从地图中心开始的距离，在边界附近造成了相当大的形状失真，Ginzburg在兰伯特的方程中加入了一个幂项，稍微扩大了地图的范围。其结果既不等角也不等面积。
+	- ![image.png](../assets/image_1623834578761_0.png) 
+	  Ginzburg I, north polar 
+	  ![image.png](../assets/image_1623834583526_0.png) 
+	  Ginzburg I, eastern equatorial (central meridian 70°E) 
+	  ![image.png](../assets/image_1623834588468_0.png) 
+	  Ginzburg II, north polar 
+	  ![image.png](../assets/image_1623834594531_0.png) 
+	  Ginzburg's II, eastern equatorial
+- 比较金兹堡和兰伯特的等面积投影在相同比例尺下绘制在一个半球的变形椭圆。
+  ![image.png](../assets/image_1623834528160_0.png)
