--- a/pages/埃托夫.汉莫尔.温克尔三重投影.md
+++ b/pages/埃托夫.汉莫尔.温克尔三重投影.md
@@ -1,6 +1,6 @@
 public:: true
-nextPage:: [[方位投影]]
-prevPage:: [[等距圆柱投影_Winkel I / II]]
+下一页:: [[方位投影]]
+上一页:: [[等距圆柱投影_Winkel I / II]]
 
 # 方位投影的三种改进
 ## 从方位等距离投影到埃托夫和其他投影
