--- a/pages/方位投影.md
+++ b/pages/方位投影.md
@@ -1,6 +1,6 @@
 public:: true
-上一页:: [[圆柱投影]]
-下一页:: [[埃托夫/汉莫尔/温克尔三重投影]]
+下一页:: [[圆柱投影]]
+上一页:: [[埃托夫/汉莫尔/温克尔三重投影]]
 原链接:: [projAz](https://web.archive.org/web/20180702154259/http://progonos.com/furuti/MapProj/Normal/ProjAz/projAz.html)
 
 -
