--- a/pages/极.赤道方位等距等面积投影.md
+++ b/pages/极.赤道方位等距等面积投影.md
@@ -1,4 +1,6 @@
 public:: true
+上一页:: [[摩尔维特 (Mollweide) 投影]]
+下一页:: [[等距圆柱投影_Winkel I / II]]
 
 # 一般的极地方位投影
 - ![image.png](../assets/image_1623590568077_0.png)
