--- a/pages/等积正弦投影.md
+++ b/pages/等积正弦投影.md
@@ -1,4 +1,6 @@
 public:: true
+上一页:: [[Kavrayskiy's VII投影]]
+下一页:: [[克拉斯特抛物线投影]]
 
 # 推导等积正弦投影
 - 想象一下投影的赤道面,与 [[Kavrayskiy's VII投影]] 有一些相似之处，但具有更严格的属性：
