--- a/pages/角度变形模式.md
+++ b/pages/角度变形模式.md
@@ -1,4 +1,6 @@
 public:: true
+上一页:: [[变形椭圆]]
+下一页:: [[如何创建投影]]
 
 # 变形模式
 - Tissot的方程描述了在两个主要方向上，即沿子午线和沿与之相交的平行线，各点的比例系数如何受到影响。在地球上，这些方向当然是正交的；在投影地图上，转换后的比例系数提供。
