--- a/pages/方位投影.md
+++ b/pages/方位投影.md
@@ -1,7 +1,7 @@
 public:: true
 下一页:: [[圆柱投影]]
 上一页:: [[埃托夫/汉莫尔/温克尔三重投影]]
-原链接:: [projAz](https://web.archive.org/web/20180702154259/http://progonos.com/furuti/MapProj/Normal/ProjAz/projAz.html)
+原文链接:: [Azimuthal Projections](https://web.archive.org/web/20180702154259/http://progonos.com/furuti/MapProj/Normal/ProjAz/projAz.html)
 
 -
 # 简介
