--- a/pages/圆柱投影.md
+++ b/pages/圆柱投影.md
@@ -15,4 +15,8 @@ public:: true
   * 各个纬线的比例尺差别很大，在两极达到无穷大，两极在地球上的长度为零，但在圆柱形地图上却与赤道一样长。
 	- ![image.png](../assets/image_1623892351024_0.png) 
 	  如果赤道柱面图的宽度通过重新缩放进行归一化，那么（因为它们的子午线间距相同）投影的唯一定义特征是其纬线的间距。 在这里，显示了北半球的一个切片，带有度数和颜色渐变标尺（比较方位角正投影插图）。 蓝色极地纬度在等面积设计中必然被压缩，并在米勒、墨卡托和其他透视投影中被不同程度地扩展； 只有等距的 Plate Carrée 与地球一样呈线性间隔。 请注意，最左边的三个投影实际上是相同原理的重新缩放版本，并且墨卡托和中央圆柱贴图延伸到无限大。
+- 横轴投影面时，两条相对的经线位于赤道方面的赤道之上；其他属性则不成立。
+- 滚动矩形地图并连接两个相对的边缘会创建一个管子，或一个没有端盖的圆柱体。 事实上，一些圆柱投影是由围绕球体紧密配合的管子在几何上推导出来的。 前者可能是割线或切线，因此两条纬线或赤道分别是标准线。
+- 所有的圆柱形投影都非常相似，事实上只是通过纬线的间距来区分。非常重要的，独特的共形圆柱投影以墨卡托命名，并在其他地方讨论。在许多重新缩放的版本中，实际都是一个等面积的圆柱投影。
+- 作为一个群体，圆柱形投影更适合于绘制以标准平行线为中心的狭窄地带。虽然对于比较纬度相近的地区很有用，但由于极地变形，它们不适合绘制世界地图。不幸的是，圆柱形地图经常被用于教科书和其他流行的出版物中，这可能是由于研究不力和其简单的形状整齐地适合页框。
 -
