--- a/pages/圆柱投影.md
+++ b/pages/圆柱投影.md
@@ -15,8 +15,31 @@ public:: true
   * 各个纬线的比例尺差别很大，在两极达到无穷大，两极在地球上的长度为零，但在圆柱形地图上却与赤道一样长。
 	- ![image.png](../assets/image_1623892351024_0.png) 
 	  如果赤道柱面图的宽度通过重新缩放进行归一化，那么（因为它们的子午线间距相同）投影的唯一定义特征是其纬线的间距。 在这里，显示了北半球的一个切片，带有度数和颜色渐变标尺（比较方位角正投影插图）。 蓝色极地纬度在等面积设计中必然被压缩，并在米勒、墨卡托和其他透视投影中被不同程度地扩展； 只有等距的 Plate Carrée 与地球一样呈线性间隔。 请注意，最左边的三个投影实际上是相同原理的重新缩放版本，并且墨卡托和中央圆柱贴图延伸到无限大。
-- 横轴投影面时，两条相对的经线位于赤道方面的赤道之上；其他属性则不成立。
+- 横轴投影面时，两条相对的经线位于赤道投影面的赤道之上；其他属性则不成立。
 - 滚动矩形地图并连接两个相对的边缘会创建一个管子，或一个没有端盖的圆柱体。 事实上，一些圆柱投影是由围绕球体紧密配合的管子在几何上推导出来的。 前者可能是割线或切线，因此两条纬线或赤道分别是标准线。
 - 所有的圆柱形投影都非常相似，事实上只是通过纬线的间距来区分。非常重要的，独特的共形圆柱投影以墨卡托命名，并在其他地方讨论。在许多重新缩放的版本中，实际都是一个等面积的圆柱投影。
 - 作为一个群体，圆柱形投影更适合于绘制以标准平行线为中心的狭窄地带。虽然对于比较纬度相近的地区很有用，但由于极地变形，它们不适合绘制世界地图。不幸的是，圆柱形地图经常被用于教科书和其他流行的出版物中，这可能是由于研究不力和其简单的形状整齐地适合页框。
+## 等距圆柱投影和卡西尼投影
+- 所有地图经纬网中最简单的属于正轴等角投影，有许多名称，如等距圆柱、平面投影和矩形投影。它是一个带标准经线的圆柱形投影:所有经线都有恒定的刻度，等于标准纬线的刻度，因此所有纬线的间距相等。它被归功于埃拉斯特斯(约。公元前200年)和提尔的马里努斯(约。100).它由于结构简单而广泛使用，甚至直到现代航海还在使用此投影。
+- 等角投影的一种特殊情况叫做板状投影(Plate Carré)，或简单的圆柱形投影:赤道是一条标准的纬线，因此当它是所有经线的两倍长时，使地图成为一个2 : 1的矩形和经纬网的网格正方形。快速、简单的方程导致了它在粗糙的计算机绘制的地图上的复兴，使用于早期的机器或实时图形。它仍然常用于地球和行星特征的数字化纹理（"表皮"）中。
+- 另一个特例，詹姆斯·加尔 (James Gall) 的等轴投影 (1885) 在 45°N 和 45°S 处具有标准纬线，为他的等面积投影设计选择了相同的纬度。
+- César F. Cassini在1745年提出过一个横轴的等距圆柱形投影，并以自己名字命名。卡西尼的祖父Jean Dominique（生于乔瓦尼-多米尼克）是一个天文学家和制图师家族的最杰出成员。一些欧洲国家一直在大型地形图中使用卡西尼的投影。变形与正常投影面相同，因此中央子午线、赤道和其他三条90°倍数的子午线都是等比例尺的直线。
+- 虽然很少提及，但是斜轴等距圆柱形地图对于快速计算地图上两点到任何其他点的角度和直线距离非常有用。
+	- ![image.png](../assets/image_1623919399001_0.png) 
+	  ![image.png](../assets/image_1623919406476_0.png) 
+	  赤道投影面上等距圆柱投影的两种特殊情况只在水平尺度上不同。在第一张地图上，通常称为plate carrée，标准纬线为0；在第二张地图上，加尔的等高线投影在北纬45度、南纬45度有标准纬线
+	  ![image.png](../assets/image_1623919413688_0.png) 
+	  卡西尼的投影是一个横轴的plate carrée投影，这里的中心子午线是东经70度和西经110度。
+## 米勒圆柱投影
+- ![image.png](../assets/image_1623919648541_0.png)
+- 奥斯本-米勒（Osborn M. Miller）出版的所有投影中最著名的（1942年），在数学上被认为是对墨卡托的妥协，保留了其熟悉的形状，但极地的变形程度小得多。在计算墨卡托方程之前，它对纬度采用了0.8的缩减系数，并对结果采用了一个反系数。因此，该地图可以包括整个世界。该投影既不保形也不保面积。
+- 米勒创造了其他几个投影，包括其他三个圆柱形设计；没有一个像以他的名字命名的那样受欢迎。
+# 透视圆柱投影
+- 一些圆柱投影是由基于透视的几何过程定义的。大致可以想象成一个半透明的球壳，被一根管子、割线或切线包裹着。当球体和管都围绕后者的轴旋转时，固定的光源沿着单个子午线发射光线，将球形特征的“阴影”投射到管上。在一个完整的旋转之后，管子沿着平行于它的轴的一条线被切割并且展开。
+- 仅仅通过改变源的位置和管的直径，就会产生不同的投影。光源也可能无限远，使光线平行。
+- 相比之下，其他圆柱投影，如等距圆柱投影、米勒投影和墨卡托投影具有任意定义的传统经纬网，而不是通过光源类比形成的。
+- ![image.png](../assets/image_1623920060119_0.png) 
+  选定透视圆柱投影在相同比例因子下的横截面示意图显示了地图大小(在一种情况下为无穷大)和纵横比的差异。红色光线将单个子午线的0°、30°、60°和90°的点“画”到蓝色管上。数学推导在: [[正轴圆柱投影]] 中。
+## 兰伯特的圆柱等面积投影
+- ![image.png](../assets/image_1623920620484_0.png)
 -
