--- a/pages/圆柱投影.md
+++ b/pages/圆柱投影.md
@@ -43,3 +43,9 @@ public:: true
 ## 兰伯特的圆柱等面积投影
 - ![image.png](../assets/image_1623920620484_0.png)
 -
+- 相同面积的圆柱投影切线——使赤道在其法向位置成为标准纬线——由约翰·H·兰伯特在赤道和横向以及其他几个投影中严格定义（1772 年）。 它通过逐渐压缩远离赤道的平行线以补偿过度的水平比例来节省面积。 然而，只有赤道没有形状变形。这种投影有时归因于阿基米德，但这种混淆可能源于他绘制的球体和外接圆柱体的体积图。
+- 这种投影的视角很容易通过在地球上滚动一个柔性薄片，并将每个点水平地投射到如此形成的管子上而得到直观感受。换句话说，光线从圆柱体的轴线射向它的表面，然后沿子午线切割并展开。
+- 像大多数圆柱投影一样，沿标准纬线投影的变形是可以接受的，但在极地区域几乎无法使用，因为极区被压缩了，所以地图比高的要宽得多。而且,像在其他圆柱投影中一样，沿任一纬线变形都是均匀的。
+- ![image.png](../assets/image_1623922722859_0.png) 
+  兰伯特等面积圆柱投影的图解展开为相切圆柱体，0°是标准纬线。
+-
