--- a/pages/方向.md
+++ b/pages/方向.md
@@ -1,4 +1,6 @@
 public:: true
+上一页:: [[测地线]]
+下一页:: [[形状]]
 
 - 一架飞机在巴西坎皮纳斯上空飞行，它的航向H被解读为与当地子午线M的夹角，即罗盘指针指向的南北向线(曾补偿过磁偏角):这里是292.5°，也称为西北偏西。在没有侧风的情况下，航向与行驶方向或方位一致。
   ![image.png](../assets/image_1623383529455_0.png)
