--- a/pages/面积.md
+++ b/pages/面积.md
@@ -1,4 +1,6 @@
 public:: true
+下一页:: [[变形椭圆]]
+上一页:: [[形状]]
 
 # 是否保留了面积比？
 - 除了导航目的之外，对于大多数具有普遍意义的地图来说，面积相等是最基本的属性。地图是一种一目了然地传达信息的工具，比表格或数字列表更快、更简洁，视觉比较通常需要真实的面积比。重要应用包括 
