--- a/pages/前言.md
+++ b/pages/前言.md
@@ -5,11 +5,12 @@ public:: true
 - 其实这套投影教程的内容比较混杂,但是示例图多,显示的清楚,毕竟一图胜千言
 - 机翻用DeepL和搜狗,虽然DeepL吹的很厉害,但是大部分时候搜狗翻译的更通顺些,可能是专有名词多吧
 - 如果只是想了解各种世界地图,可以参考[世界地图投影](http://michaelminn.net/tutorials/gis-projections-world/)  ,如果想了解投影基础概念,可以看一下 [这篇介绍](http://michaelminn.net/tutorials/gis-projections/index.html)
+- 本篇中主要还是介绍地图投影的整体知识,椭球,水准面,参心坐标系,地心坐标系,黄道赤道,时间标准等其他内容将会慢慢补充,实际主要是以兴趣为主,与干活相关的内容比较少
 ## 翻译时的增补
 - 在进行翻译之前添加了一个[[WKT]]的投影说明,为了方便平常的查阅和使用,毕竟日常使用主要是用的WKT格式的投影,有时间的话会加上一些说明,也加强一些自己的理解,wkt/wkb日常坑人。
 - 因为本文写的比较早,部分技术更新导致部分内容过时(实际作者也在更新,但是18年网站没了),会加上部分译注.
 - 文章中有部分提到历史插图会添加插图说明,不一定全是原文中的图片,会有增删,因为网站已经无法访问,原文中有部分缺失图片,如果有时间我会想办法加上
 - 翻译不是特别准,毕竟是机翻改的,而且投影这块有些专业词汇我也很久没用了,不是特别熟悉，如果有什么翻译建议可以在issue里提出
 ## 关于软件选择
-- 本来还是准备Sphinx那套弄,GDAL文档就是这样写的,但是这套教程里的图片太多,跳转链接也多,shpinx手写插入图片和链接实在太麻烦了,也考虑过用rswiki,就dokuwiki来写,用wiki的话跟原有的混在一起不太好区分原作者,就用的现在这套,logseq,可以直接粘贴图片,而且有块引用,方便后期修改
-- 排版现在懒得折腾,先这样吧
+- 本来还是准备Sphinx那套弄,[GDAL文档](https://headfirst-gdal.readthedocs.io)就是这样写的,优点是排版好看,而且可以导出pdf方便阅读,但是这套里的图片太多,跳转链接也多,shpinx手写插入图片和链接实在太麻烦了,也考虑过用dokuwiki来写,用wiki的话跟原有的混在一起不太好区分原作者,就用的现在这套,[logseq](https://logseq.com),可以直接粘贴图片,而且引用连接方便,方便后期修改
+- 缺点是排版不好看,第二是logseq开发太快,不稳定,如果要用,一定要记得随时提交,或者直接在网站上连github的库,随时提交,丢过两次数据,出现过一次乱码,不过有提交记录问题不大,现在满足我一切需求,现在懒得折腾,先这样吧
