--- a/pages/圆柱投影.md
+++ b/pages/圆柱投影.md
@@ -48,4 +48,18 @@ public:: true
 - 像大多数圆柱投影一样，沿标准纬线投影的变形是可以接受的，但在极地区域几乎无法使用，因为极区被压缩了，所以地图比高的要宽得多。而且,像在其他圆柱投影中一样，沿任一纬线变形都是均匀的。
 - ![image.png](../assets/image_1623922722859_0.png) 
   兰伯特等面积圆柱投影的图解展开为相切圆柱体，0°是标准纬线。
--
+## 加尔正交投影
+- James Gall的正交等面积投影（1855年）与Lambert的版本基本相似，但在北纬45°和南纬45°有标准纬线。 因此，投影圆柱体是正割的，而且更窄；垂直幅度必须成比例地扩大，以保持总的制图面积。因此，唯一真正的区别是长宽比（即宽度除以高度）。高尔的正交地图是兰伯特的两倍高。
+- 尽管保留了面积，但这种投影的非常规形状变形模式限制了其实用性。
+- ![image.png](../assets/image_1623980497891_0.png) 
+  Gall/Gall-Peters's orthographic projection
+## ![image.png](../assets/image_1623980580822_0.png) 
+Gall的正投影的发展。如果Lambert的圆柱体在45°N和45°S处成为正切，结果只有$2^{\frac{1}{2}}/2$ 倍宽；投影后，它会以反比垂直拉伸。
+## “Peters” (Gall-Peters) 投影
+- 1967年，Arno Peters发表了一个与Gall的1855年正交投影基本相同的圆柱形投影图。也许它实际上是一个独立的创造；尽管如此，彼得斯坚持声称它是一个原创的设计和新颖的东西，即使受到了严厉的批评。1973年后，该投影被大力推广，获得了广泛的媒体报道。它的所谓优点主要是与墨卡托投影的缺点相比较。
+- 据称，彼得斯的投影没有距离或面积失真，也没有极端的形状失真。因为它是等面积的，所以它是平等的:第三世界国家，其中许多位于热带地区，以实际面积比例呈现，而墨卡托投影大大夸大了较高纬度地区的面积，包括欧洲、北美和前苏联。
+- 尤其是最后一点，即所谓的对历史不公正的修正，帮助该设计被几个组织（如联合国教科文组织）接受为主要或唯一的投影，专业制图师谴责这一选择，他们指责彼得斯进行政治宣传和操纵不知情的人。媒体 在以“地图战争”命名的这一集中，彼得斯经常被视为大卫对抗已建立的制图巨人。
+- 特别是这最后一点，即对历史上不公正现象的所谓纠正，帮助该设计被几个组织（如联合国教科文组织）接受为主要或唯一的投影，但专业制图师谴责这一选择，他们指责彼得斯进行政治宣传和操纵不知情的媒体。在这段被一些人命名为 "地图战争 "的事件中，彼得斯经常被看作是反对既定制图学的歌利亚的大卫。
+- 遗憾的是，支持Peters投影的论点是错误的、夸大的或谬误的。它确实有严重的形状失真，而且它的失真模式沿着子午线发生了很大变化（墨卡托投影没有局部形状失真）。当然还有距离失真（在两极是无限的，就像所有圆柱形投影一样），而且距离只沿两条标准纬线保留。面积失真当然是不存在的；另一方面，许多其他的等面积投影已经存在，其中一些的整体形状失真要小得多
+- 彼得斯的话语对制图师们，特别是他说他发明了第一个等面积的投影。
+- 最后，墨卡托投影是一个错误的批评对象，因为它是作为一种导航设备而设计的，从未打算用于绘制世界地图；不幸的是，它被许多天真的杂志和教科书--误导性地--所采用，这意味着只有它应该被更好的候选者所取代--而彼得斯的断言中没有一个证明他是最佳的。
