--- a/pages/克拉斯特抛物线投影.md
+++ b/pages/克拉斯特抛物线投影.md
@@ -1,6 +1,7 @@
 public:: true
 上一页:: [[等积正弦投影]]
 下一页:: [[摩尔维特 (Mollweide) 投影]]
+原文链接:: [Deducing Craster's Parabolic Projection](https://web.archive.org/web/20180630041347/http://progonos.com/furuti/MapProj/Normal/CartHow/HowCPar/howCPar.html)
 
 # 克拉斯特抛物线投影推导
 - 假设在赤道方向有一个尖极等面积伪圆柱投影，其边界经线为抛物线弧，轴在赤道上，是中心经线的两倍长。
