--- a/pages/变形椭圆.md
+++ b/pages/变形椭圆.md
@@ -1,6 +1,7 @@
 public:: true
 上一页:: [[面积]]
 下一页:: [[角度变形模式]]
+原文链接:: [Useful Map Properties: Distortion Pattern](https://web.archive.org/web/20180702154254/http://progonos.com/furuti/MapProj/Normal/CartProp/Distort/distort.html)
 
 # 评估和测量变形
 - 每张平面地图都包含一些形状、面积或长度的变形；虽然有些区域可能没有变形，但其他区域可能会出现严重错误。在为地图选择合适的投影和方面时，客观地评估哪些区域受到影响以及受影响的程度是至关重要的。
