--- a/pages/如何创建投影.md
+++ b/pages/如何创建投影.md
@@ -1,8 +1,8 @@
 public:: true
 上一页:: [[角度变形模式]]
 下一页:: [[正轴方位投影]]
+原文链接:: [How Projections Work](https://web.archive.org/web/20180721074320/http://www.progonos.com/furuti/MapProj/Normal/CartHow/cartHow.html)
 
--
 # 投影是如何工作的
 - 投影的背后是什么？哪些规则告诉制图师海岸线的绘制位置？如何定义从球体坐标到平面点的映射（在数学上，两组数值之间的转换）？这种转换的效果如何？
 ## 正射/透视/几何与 "算法 "投影的对比
