--- a/pages/形状.md
+++ b/pages/形状.md
@@ -1,6 +1,7 @@
 public:: true
 上一页:: [[方向]]
 下一页:: [[面积]]
+原文链接:: [Useful Map Properties: Shapes](https://web.archive.org/web/20180310221807/http://www.progonos.com/furuti/MapProj/Normal/CartProp/ShapePres/shapePres.html)
 
 # 形状被保留了吗？
 - 共形（或正形）投影地图局部保留了角度。因此，地图中的任何两条线都与地球上相应的原线有相同的角度；特别是，投影方里网总是以直角交叉（一个必要但不充分的条件）。  另外，在任何特定点上，比例尺在所有方向上都是一样的。但这并不意味着整个地图的形状总是被保留下来，因为任何保形地图都包括某个地方的比例尺失真（也就是说，比例尺不是到处都一样的）。任何方位立体投影或墨卡托地图都是保形的。
