--- a/pages/极.赤道方位等距等面积投影.md
+++ b/pages/极.赤道方位等距等面积投影.md
@@ -1,6 +1,7 @@
 public:: true
 上一页:: [[摩尔维特 (Mollweide) 投影]]
 下一页:: [[等距圆柱投影_Winkel I / II]]
+原文链接:: [Two Aspects for Two Arbitrary Azimuthal Projections](https://web.archive.org/web/20180630041337/http://progonos.com/furuti/MapProj/Normal/CartHow/HowAzEqDA/howAzEqDA.html)
 
 # 一般的极地方位投影
 - ![image.png](../assets/image_1623590568077_0.png)
