--- a/pages/正轴圆柱投影.md
+++ b/pages/正轴圆柱投影.md
@@ -1,6 +1,7 @@
 public:: true
 上一页:: [[正轴方位投影]]
 下一页:: [[Kavrayskiy's VII投影]]
+原文链接:: [Deducing Braun's and other Stereographic Cylindrical Projections](https://web.archive.org/web/20180716235023/http://www.progonos.com/furuti/MapProj/Normal/CartHow/HowBraunC/howBraunC.html)
 
 # Braun和其他立体圆柱投影的推导
 ## Braun的投影
