--- a/pages/正轴方位投影.md
+++ b/pages/正轴方位投影.md
@@ -1,6 +1,7 @@
 public:: true
 上一页:: [[如何创建投影]]
 下一页:: [[正轴圆柱投影]]
+原文链接:: [Deducing the Azimuthal Orthographic Projection](https://web.archive.org/web/20180721074746/http://www.progonos.com/furuti/MapProj/Normal/CartHow/HowOrtho/howOrtho.html)
 
 # 正轴方位投影推导
 - 纯几何方位正交投影可以完全可视化为物理模型。最简单的情况，一个极地投影面，在这里呈现为北半球。
