--- a/pages/简单的地图背景知识介绍.md
+++ b/pages/简单的地图背景知识介绍.md
@@ -1,6 +1,7 @@
 public:: true
 下一页:: [[制图学基础知识和投影选择]] 
 上一页:: [[地图投影介绍]]
+原文链接:: [Introduction](https://web.archive.org/web/20180227085810/http://www.progonos.com/furuti/MapProj/Normal/CartIntro/cartIntro.html)
 
 - 一个广义横向多锥形投影的渲染
    ![image.png](assets/image_1623304504434_0.png)
