--- a/pages/地图投影介绍.md
+++ b/pages/地图投影介绍.md
@@ -1,4 +1,5 @@
 public:: true
+原文链接:: [Cartographical Map Projections](https://web.archive.org/web/20180702154323/http://progonos.com/furuti/MapProj/Normal/TOC/cartTOC.html)
 
 - 下图是相同比例尺,不同的投影面下的南美地图。哪个投影是最好的？哪个是对的？简而言之,没有正确答案，至少不是一直都有正确答案。即使使用了同一种投影，仅仅是改变这个投影面就可以从根本上重塑大陆形状。但如果你想要一个有根据的答案，请继续阅读。
   ![image.png](assets/image_1623292901961_0.png)
