--- a/pages/有用的地图属性.md
+++ b/pages/有用的地图属性.md
@@ -1,4 +1,7 @@
 public:: true
+上一页:: [[制图学基础知识和投影选择]] 
+下一页:: [[距离和比例尺]] 
+原文链接:: [Useful Map Properties](https://web.archive.org/web/20180310221837/http://www.progonos.com/furuti/MapProj/Normal/CartDef/MapDef/mapDef.html)
 
 # 根据任务选择投影
 - 没有一个地图投影能适应所有任务。在选择投影之前，我们必须仔细权衡利弊，以及它们如何影响
