--- a/pages/测地线.md
+++ b/pages/测地线.md
@@ -1,6 +1,7 @@
 public:: true
 上一页:: [[距离和比例尺]]
-下一页:: [[方向]]
+下一页:: [[方向]] 
+原文链接:: [Useful Map Properties: the Geodesic](https://web.archive.org/web/20180313143727/http://www.progonos.com/furuti/MapProj/Normal/CartProp/Geodesic/geodesic.html)
 
 # 两点之间最短的路径是什么？
 - ![image.png](../assets/image_1623379915221_0.png) 
