--- a/pages/距离和比例尺.md
+++ b/pages/距离和比例尺.md
@@ -1,4 +1,7 @@
 public:: true
+上一页:: [[有用的地图属性]] 
+下一页:: [[测地线]] 
+原文链接:: [Useful Map Properties: Distances and Scale](https://web.archive.org/web/20180322172708/http://www.progonos.com/furuti/MapProj/Normal/CartProp/DistPres/distPres.html)
 
 # 距离可以精确测量吗？
 - 任何实用的地图，无论是球形的还是平面的，都会将地球缩小到可用的大小。这种缩小的比例，可以用图形或数字来表示。
