--- a/pages/面积.md
+++ b/pages/面积.md
@@ -1,6 +1,7 @@
 public:: true
 下一页:: [[变形椭圆]]
 上一页:: [[形状]]
+原文链接:: [Useful Map Properties: Areas](https://web.archive.org/web/20181013235858/http://www.progonos.com/furuti/MapProj/Normal/CartProp/AreaPres/areaPres.html)
 
 # 是否保留了面积比？
 - 除了导航目的之外，对于大多数具有普遍意义的地图来说，面积相等是最基本的属性。地图是一种一目了然地传达信息的工具，比表格或数字列表更快、更简洁，视觉比较通常需要真实的面积比。重要应用包括 
