--- a/pages/伪圆柱投影.md
+++ b/pages/伪圆柱投影.md
@@ -15,20 +15,25 @@ public:: true
 - 尽管它们的几何约束比圆柱设计灵活得多，但一些决定仍然适用于所有伪圆柱投影：子午线的形状（直线、圆锥截面、正弦曲线、任意曲线）、纬线的距离分布、线性或尖极 . 不同的作者经常采用相同的选择组合，并且几个伪圆柱“投影”实际上是同义词。 鉴于这些替代方案，这一大组的预测分类有些随意； 许多设计可以很容易地分配到多个部分。 在无数可能的伪圆柱投影中，有几个是有用的教学设备和世界地图的流行选择。
 ## 从圆柱形到伪圆柱形
 - 伪圆柱地图概括了“多圆柱”概念，该概念可以表示为应用于离散纬度范围的圆柱投影群的概括。
-- ![image.png](../assets/image_1624185644019_0.png) 
-  在这里，九个带有部分圆柱等距地图的条带覆盖了地球（为了清晰起见，部分被移除）。 每个条带与不同的标准纬线相切并拟合，其中一半埋在地球内部（赤道条带是例外）； 长度各不相同，但所有九张地图的垂直比例尺都相同。
-- ![image.png](../assets/image_1624185710461_0.png) ![image.png](../assets/image_1624185733955_0.png) 
-  ![image.png](../assets/image_1624185665643_0.png) 
+- ![image.png](../assets/image_1624759517833_0.png)
+- 在这里，九个带有部分圆柱等距地图的条带覆盖了地球（为了清晰起见，部分被移除）。 每个条带与不同的标准纬线相切并拟合，其中一半埋在地球内部（赤道条带是例外）； 长度各不相同，但所有九张地图的垂直比例尺都相同。
+- ![image.png](../assets/image_1624759535810_0.png) ![image.png](../assets/image_1624759544748_0.png) ![image.png](../assets/image_1624759550936_0.png) 
   推广上面的扁平离散映射，无限多条的连续极限情形将是伪圆柱正弦投影；由于条带将完全覆盖地球表面，因此很容易看出最终结果是等面积的。对齐每个条带的中央经线不是强制性的:其他排列(见例子)是可能的，但可能没那么有用。
 # 经典伪圆柱投影
 ## 正弦(Sanson-Flamsteed)投影
-- ![image.png](../assets/image_1624186137066_0.png) 
+- ![image.png](../assets/image_1624759569798_0.png) 
   正弦(桑松-弗拉姆斯蒂德)地图，经纬网间距10°
 - 尽管名字相同，但 "Sanson-Flamsteede "投影并非由Nicholas Sanson（约1650年）或John Flamsteed（1729年，死后出版）首次研究，而可能是由Mercator研究的--至少在Mercator地图集的后期版本（1606年）中，它被列入南美洲地图，并被称为Mercator等面积投影，或Mercator-Sanson。由于在正轴投影时，所有经线都是正弦曲线，所以也被称为正弦投影，可以很容易推导出来。
 - 正弦投影是等面积的，并保留了沿纬线的距离，即赤道地图中的所有纬线都是标准线，但只有中央子午线是标准经线。虽然赤道带的复制几乎没有失真，但由于裁剪，极冠的易读性很差。部分恒定的比例和简单的结构仍然推荐像非洲和南美洲这样的大陆进行这种投影，通常是在方便的重新调整之后，对于世界地图来说，会应用于分瓣地图。
 ## Mollweide 投影
 - 由德国人Karl B. Mollweide创建，同名的伪圆柱形投影以一个椭圆为界；两极为点，其赤道是中央直线子午线的两倍，但都不是标准线。所有其他经线都是椭圆弧，平行线的间距不等，以保持面积。只有中央子午线与标准平行线40°44'12 "N和S的交点没有变形。尽管它的几何形状很容易推导出来，但计算却比今天仍然重要的另一种经典的伪圆柱形，即正弦投影更复杂--这一点以及沿中央子午线的均匀比例的损失是为减少极地地区的拥挤所付出的代价。
-- ![image.png](../assets/image_1624186225925_0.png)
+- ![image.png](../assets/image_1624759591394_0.png)
   正轴Mollweide 投影地图
-- ![image.png](../assets/image_1624186276986_0.png)
+- ![image.png](../assets/image_1624759610424_0.png) ![image.png](../assets/image_1624759857757_0.png)
+- Bromley（左图，标准赤道）和Tobler（右图，圆形）所做的经过调整的莫尔维德投影也是等面积的。
+- 尽管摩尔韦德的投影具有等面积的特性和令人愉快的形状，但自1805年发表以来，摩尔韦德的投影几乎没有得到认可，只是在法国人雅克-巴比内特于1857年将其作为同源投影提出后，才变得更加知名。从历史上看，它的其他常见别名包括椭圆、巴比内特、同位素（来自希腊语homo的 "相同"，因此为等面积）。
+- 这种投影具有深远的影响，在融合（John P. Goode的homolosine，Allen K. Philbrick的Senu-Mollweide，György Érdi-Krausz）和平均（Samuel W. Boggs和Oscar S. Adams的eumorphic；一些作者还将其与Winkel II联系起来）的设计中与正弦形结合。单独或组合的中断式变体也很受欢迎。
+- 其他变化包括斜轴投影面，如约翰·巴塞洛缪的亚特兰蒂斯和通过正交倒数因子的简单重新缩放，这保持了面积等效性，同时改变了纵横比和角度变形模式。例如，瓦尔多·托布勒(1962)建议用标准纬线73° 7 ' 43.85 "南北将整个地图做成圆形；罗伯特·h·布罗姆利的投影(1965)拉长了椭圆，合并了赤道的标准纬线。
+- 莫尔维德的2:1椭圆偶尔会被误认为艾托夫和哈默的投影，两者都不是伪圆柱投影，尽管后者也是等面积的。更容易混淆的是阿皮安第二个球状投影的椭圆全世界延伸，数学上简单得多，面积也不相等。
+## Foucault's Stereographic Equivalent
 -
