--- a/pages/伪圆柱投影.md
+++ b/pages/伪圆柱投影.md
@@ -36,4 +36,48 @@ public:: true
 - 其他变化包括斜轴投影面，如约翰·巴塞洛缪的亚特兰蒂斯和通过正交倒数因子的简单重新缩放，这保持了面积等效性，同时改变了纵横比和角度变形模式。例如，瓦尔多·托布勒(1962)建议用标准纬线73° 7 ' 43.85 "南北将整个地图做成圆形；罗伯特·h·布罗姆利的投影(1965)拉长了椭圆，合并了赤道的标准纬线。
 - 莫尔维德的2:1椭圆偶尔会被误认为艾托夫和哈默的投影，两者都不是伪圆柱投影，尽管后者也是等面积的。更容易混淆的是阿皮安第二个球状投影的椭圆全世界延伸，数学上简单得多，面积也不相等。
 ## Foucault's Stereographic Equivalent
+- ![image.png](../assets/image_1624760306284_0.png)
+- 德·佩蒂特·福柯在1862年提出的一种伪圆柱投影是立体圆柱投影的等价物:它的水平纬线的间距与方位立体投影和布劳恩圆柱立体投影的赤道方向的间距相同，为了保持面积而计算的经线是五阶曲线。
+- 尽管它是继正弦和摩尔维德投影之后的第一批“现代”伪圆柱投影之一，但立体投影的等效物只不过是一种新奇的东西:由于平行间距在较高纬度增加得更快，水平尺度相应地缩小，产生具有过度角度失真的尖锐极点。另一种由方位角原理导出的平行间距等面积伪圆柱投影，即四次等距离投影，只是稍微成功一点，但实际上要有趣和有用得多。同样的概念，应用于方位角正投影，显然会导致Lambert的圆柱形等面积投影；从方位等距投影到正弦投影；对于gnomonic来说是不实用的。
+## 直线方里网的地图
+- 少数正轴伪圆柱形投影的方里网只包括直线，可能在赤道处断开。其中包括最古老的梯形投影、Eckert's I和II、像HEALPix网格这样的合成物，以及Snyder的带有严肃信息的制图笑话中（译者注：原文大概是谐音梗的意思，在最后有提及）。
+### Collignon投影
+- ![image.png](../assets/image_1624760551869_0.png) ![image.png](../assets/image_1624760557582_0.png) ![image.png](../assets/image_1624760564201_0.png) 
+  尽管保留了地域关系，克里尼翁投影的不寻常的变形使它成为一个新奇的角色。原投影有完全直的经纬网；这里展示的其他地图是一个对称的菱形，在两个半球有间断的变化。
+- 1865年引入的埃杜尔·科利翁(douard Collignon)的投影保留了一些面积，但严重扭曲了形状。在赤道方面，南北半球可以是一个等腰三角形，底部在赤道上，高度为赤道长度的一半，也可以是一个等腰梯形，底部在赤道上。所有的经纬线都是直的，但是经线在赤道处可以随意断开。
+- 世界地图的常见排列方式是一个不间断经线的等腰三角形，并以平坦的南极为基础。补充选项（倒三角、对称菱形和沙漏形）和两个或多个菱形的间断变体同样有效，但在实践中从未见过。尽管其结构简单，这种投影被认为只是一种好奇心；最近，它作为HEALPix格式的一部分找到了实际应用。
+## 抛物线等面积投影
+- 1929年，John E.E.Craster中校提出了三种假圆柱形等面积投影的特点，其经线是基于圆锥截面。他拒绝了椭圆和双曲线版本，并为抛物线设计提供了一个简略的坐标表。后来Charles H.Deetz和Oscar S.Adams(1934)提出了数学细节，包括一个中断的版本，并由Adams(1945)再次提出。
+- ![image.png](../assets/image_1624761335439_0.png) 
+  卡斯特抛物线投影
+- 虽然具有相同的2:1比例，表面上类似于正弦曲线，但卡斯特的抛物线投影有更多的凸子午线，在边界子午线附近的高纬度地区，形状失真有所减少。它的数学发展是求解三次函数的一个有趣的应用。
+- 作为基于三角曲线和圆锥曲线的伪圆柱投影系列(1934)的一部分，Reinholds Putniņš适时地指出他的P4投影与Craster的抛物线相同。
+## 西蒙和其他人的投影
+- 在战前的德国，卡尔·西蒙提出了四个伪圆柱投影，第一个无疑是最著名的。除了一个之外，其他所有人后来都被其他作者独立地重新发现了。
+### 洛西姆塔尔投影
+- 西蒙称他的第一个投影(1935年)为Wegtreue Ortskurskarte，以1966年出版它的W.Tobler的名字命名，今天几乎总是被称为loximuthal。这个词很好地总结了它的独特之处:给定一个参考纬度，所有与中央子午线相交的直线都是等角航线（ loxodrome）。此外，它们都是方位角正确的标准线，类似于穿过方位等距地图中心的直线。
+- ![image.png](../assets/image_1624761648131_0.png) ![image.png](../assets/image_1624761653439_0.png) 
+  中央子午线为0的洛西姆塔尔地图。参考纬度是0度(顶部)和51.5度，靠近格林威治(上图)。必须为每个感兴趣的点创建Loximuthal地图，如以下图示例所示。
+- 相比之下，在墨卡托地图上，所有的等角航线都是直线，但是比例不仅在不同的loxorome之间快速变化，而且沿着相同的直线变化；方位角也不一致。
+- 洛西姆塔尔投影面积不等，仅在中央子午线与参考点(也是标准点)平行相交的地方是共形的。与大多数伪圆柱投影不同，它不是相对于赤道对称的，除非选择赤道作为参考纬度。
+### 四次等面积投影（The Quartic Authalic Projection）
+- ![image.png](../assets/image_1624761824427_0.png)
+- 和福柯的立体对等物一样，四次等面积是另一种由方位原理导出的等面积(四次，因为它的经线是四阶曲线，自积来自希腊语autos ailos，“相同面积”)投影；这是西蒙发表的第三个投影(1937年)，由亚当斯独立开发(1944年发表，1945年再次发表，附有详细的分析，没有名字)。
+- 因为它的纬线像兰伯特方位角等积投影的赤道面一样间隔很远，所以它是导致更著名的哈默投影的变换的极限情况。亚当斯更喜欢两个半球的间断版本，他强调了它的极点是如何不如正弦曲线的极点尖锐，而赤道带避免了莫尔维德的垂直夸张。尽管如此，除了作为麦克布赖德和托马斯的平极四次投影的灵感之外，四次authalic通常被忽略。
+- 最后，西蒙的第四个投影是简单的四次等深线，具有相互的水平和垂直缩放，以保持面积，同时适合2 : 1的纵横比。
+## Kavrayskiy's Fifth Projection
+- ![image.png](../assets/image_1624762137895_0.png)
+- 除了圆锥和圆柱投影外，俄罗斯的弗拉基米尔·卡弗雷斯基还提出了三种伪圆柱设计，其中的V和VI是基于三角函数的等面积设计。第五个(1933年)有尖的极点，在北纬35度和南纬35度的平行线和根据正弦曲线计算的经线，但不是正弦曲线本身。第六部(1936)与瓦格纳1932年的第一部投影完全相同，都是正弦子午线。
+## 平极伪圆柱投影
+- 带有极线的地图被称为平极地图，以直线而不是点来表示两极。当然，所有的正轴圆柱形投影都是平极的，但这个术语通常适用于一大群伪圆柱形设计。
+- 极线以水平比例失真为代价，避免了正弦曲线和莫尔维德投影的拥挤外观，水平比例失真在极点是无限的。
+- 像瓦格纳和埃克特这样的制图员发展了整个平极投影“家族”。其他带有极线的投影包括内尔伪圆柱投影(第一个知名的投影)、温克尔投影一和温克尔投影二。
+### 埃克特的六个投影
+- 1906年，德国教授马克斯·埃克特(后来的埃克特·格雷芬多夫)发表了六个伪圆柱投影，它们在正轴时有一些共同的特征:
+  * 中央子午线是直的，长度是赤道的一半，是奇数投影中的一条标准线
+  * 两极是平的，只有赤道的一半长
+  * 偶数序号的投影面积相等，奇数序号的投影具有等间距的纬线
+- 因此，在所有六个方案中，极点由一个正方形构成，整个地图由一个两倍宽的矩形构成。边界经线是简单的曲线。
+- ![image.png](../assets/image_1624762522403_0.png) ![image.png](../assets/image_1624762528204_0.png) 
+  Eckert的第一个和第二个投影
 -
