--- a/pages/伪圆柱投影.md
+++ b/pages/伪圆柱投影.md
@@ -80,4 +80,31 @@ public:: true
 - 因此，在所有六个方案中，极点由一个正方形构成，整个地图由一个两倍宽的矩形构成。边界经线是简单的曲线。
 - ![image.png](../assets/image_1624762522403_0.png) ![image.png](../assets/image_1624762528204_0.png) 
   Eckert的第一个和第二个投影
--
+- 虽然这六个投影没有一个是共形的，但奇数投影呈现出更好的整体形状(在正中心没有形状失真)；为了保留面积，偶数投影压缩了两极附近的垂直比例，并在赤道附近拉伸。
+- 埃克特的第二个设计是等面积的，将所有经线映射为在赤道处断开的直线。第一个投影相似，但面积不等，因为平行线间隔相等。两者都不仅仅是好奇。
+- 对于他的第三个和第四个投影，埃克特把外经线做成半圆；所有其他的经线都是规则的椭圆弧，除了中央经线，像所有埃克特平极地图一样，是直的，长度是赤道的一半。第四种设计适度用于世界地图；第三个有时被误认为是奥特利厄斯的椭圆形地图的投影，它缺乏沿纬线的恒定比例，因此不是伪圆柱形的。
+- ![image.png](../assets/image_1624784838966_0.png) ![image.png](../assets/image_1624784844755_0.png) 
+  Eckert III (top) and IV maps
+- ![image.png](../assets/image_1624784886965_0.png) ![image.png](../assets/image_1624784937440_0.png) 
+  Eckert V (top) and VI maps
+- 第六个也是最受欢迎的埃克特平极投影有边界子午线，形状为正弦曲线周期的一半。表面上相似的第五种设计有规则的平行间隔，并且面积不等。
+- 其他几个伪圆柱投影，最著名的是西蒙，麦克布赖德和托马斯，以及瓦格纳的一系列，也是基于极线和正弦子午线。
+### 罗塞恩正弦投影
+- 卡尔·罗塞恩的伪圆柱投影(1926)的形状是从正弦曲线中导出的，纬度被压缩:极点被映射到与北纬53° 7′48″和南纬53° 7′48″对应的直线上，因此长宽比从2∶1变为约3.388∶1。这类似于艾托夫、哈默、埃克特-格雷芬多夫的投影中的坐标压缩，但没有补偿扩展。投影被放大，平行线被隔开以使整个地图面积相等。
+- 罗森的方法后来被乌尔马耶夫所概括。
+- ![image.png](../assets/image_1624785116173_0.png) 
+  Map in Rosén's projection.
+### 罗宾逊投影
+- 在关于圆柱形世界地图是否适合教学的广泛争议之后，传统的地图集出版商兰德·麦克纳利(Rand McNally)要求著名的制图员和教育家阿瑟·H·罗宾逊开发一种新的地图投影，该投影具有减少的整体失真和简单、不间断的经纬网。
+- 所产生的折衷投影没有应用几何透视过程，如用于经典方位角投影，也没有实现某些先前定义的目标，如墨卡托的目标，或使用简单的数学函数，如Sanson-Flamsteed、Mollweide和Eckert系列的正弦或椭圆弧，而是将赤道方面的边界经线用常规值定义，通过手工计算，以产生一个 "看起来正确 "的地图（因此其俗称正视）。一个表格定义了这些经线的纬度5°增量的x、y坐标值；其他点必须是内插的（内插方法没有硬性规定）。就像所有的假圆柱形投影一样，在正常的方面，经线沿着所有平行线等距排列，这些平行线是水平的、笔直的（在38°N和38°S之间，有规律的排列）。赤道的长度几乎是中央经线的两倍；两极是平的。
+- ![image.png](../assets/image_1624785198350_0.png) 
+  罗宾逊地图，用三度多项式内插法计算
+- 罗宾逊投影于1963年设计，1974年正式出版，在受到国家地理学会制图人员的赞扬后才真正流行起来；1988年，它作为该学会杂志的插页出版，并被选为其参考世界地图，取代了范德格林顿投影。
+### Kavrayskiy's VII Projection
+- 另一种既不保留形状也不保留面积的折衷设计是1939年Kavrayskiy的第七投影，它是一个平极伪圆柱，具有椭圆子午线和中心子午线的正确比例。与罗宾逊的相比，它的数学推导和描述要简单得多。
+- ![image.png](../assets/image_1624785278272_0.png)
+  Kavrayskiy's projection VII
+### 平极四次投影
+- 费利克斯·w·麦克布赖德和保罗·托马斯创造的几个投影的极线只有赤道的三分之一长。第四个也是最著名的(1949)，平极四次投影，有四阶曲线作为经线，并且是等面积的。
+- ![image.png](../assets/image_1624785353946_0.png) 
+  McBryde-Thomas IV (flat polar quartic) map
