--- a/pages/伪圆柱投影.md
+++ b/pages/伪圆柱投影.md
@@ -108,3 +108,53 @@ public:: true
 - 费利克斯·w·麦克布赖德和保罗·托马斯创造的几个投影的极线只有赤道的三分之一长。第四个也是最著名的(1949)，平极四次投影，有四阶曲线作为经线，并且是等面积的。
 - ![image.png](../assets/image_1624785353946_0.png) 
   McBryde-Thomas IV (flat polar quartic) map
+## 一些混合型的伪圆柱形投影
+- 一些作者试图将两个或多个现有投影的优势结合起来。可以对数值进行数学平均，或者将地图的不同部分沿着类似比例尺的线条分别投影。后一种方法在假圆柱形投影中很方便，因为它们的直线平行线具有恒定的比例；因此，不同的地图 "片 "可以分别投影，然后融合，即 "缝合 "在一起，可能在重新调整比例之后。
+### 内尔的伪圆柱投影
+- 不算过时的梯形，第一个已知的平极伪圆柱形投影是由Adam Nell在1890年发表的；实际上它是Nell的椭圆体伪投影的极限情况，以赤道为参考纬线。它的X坐标类似于圆柱投影与正弦投影的平均值，但使用一个辅助角度；整个地图是等面积的。
+- ![image.png](../assets/image_1624788140863_0.png) 
+  Nell's projection
+### 内尔-哈默投影
+- 1900年由Hammer出版的平极投影，是根据Nell的建议直接将Lambert的等面积圆柱形投影和正弦投影的x坐标平均化，并调整y坐标以保持面积。
+- ![image.png](../assets/image_1624788198421_0.png) 
+  Nell-Hammer projection
+### Goode's Homolosine
+- 约翰·古德(John P. Goode)在他1923-1925年的混合同调(同调+正弦)投影中结合了正弦和莫尔韦德(Mollweide)投影:在两个基础投影中，三个水平条纹在两个长度相同的平行线上连接——大约北纬40° 44′12″和南纬40° 44′12″。高于边界纬线的纬度用莫尔韦德投影表示，中心条纹的剩余区域由正弦表示。
+- ![image.png](../assets/image_1624788323984_0.png) 
+  古德的homolosine 地图，几乎从未使用过的不间断形式。相比之下，分瓣版非常受欢迎。
+- 经线在连接处被打断，其结果并不明显优于单独使用的任何一种原始方法；然而，近65%的地图保留了水平比例尺，极冠也合理可辨，同时在热带带保留了正弦的恒定经线比例尺。这种特别为中断而设计的投影，长期以来在地图册中相当流行。
+### Boggs Eumorphic
+- 由S.W .博格斯创造的1929年的同形投影(希腊语中的“井形”)是另一个混合体。然而，它不是离散地连接单独的带，而是将其y坐标定义为相应正弦和莫勒维德坐标的算术平均值。x坐标是为等面积地图计算的，通常以间断的形式呈现。
+- ![image.png](../assets/image_1624788450538_0.png) 
+  Uninterrupted Boggs eumorphic map
+### The Sinu-Mollweide Projection
+- 另一个融合的伪圆柱设计，艾伦·克·菲尔布里克的辛诺-莫洛韦德投影(1953)与古德的同曲面有相同的基底投影和融合纬度；然而，
+  * 使用40° 44′12″S以上的莫勒维德投影和低于它的正弦曲线，而不是三段，只有两段
+  * 优选的投影面不是正轴而是斜轴的，在最初的赤道和保留北极的中央子午线的交点处为北纬55度20度
+- 以这种简单的形式，这种投影已经在商业地图上发表了，但是像高洛辛的一样，它的作者喜欢一个中断的版本。
+- ![image.png](../assets/image_1624788656815_0.png) 
+  斜轴正弦-莫尔韦德投影。中断（分瓣）的版本更有趣
+### Eckert V
+- 埃克特的第五个投影(1906)可以用正弦投影和平板投影的算术平均值来表示(实际上两者的y坐标是相同的)。因此，极点被映射到赤道一半长度的直线上。除了中央的经络都是正弦曲线。虽然这张地图没有保留区域，但它看起来像是更受欢迎的等面积埃克特六投影。
+### Winkel I
+- O.Winkel在1921年发表的第一个投影是对Eckert的V型投影的概括，使用任意两条相对的平行线作为标准，而不一定是赤道（因此只有水平比例与特殊情况有变化）的等距圆柱投影。Winkel更倾向于50°27′35″北和南，这使得总面积与赤道周长成正比。
+- ![image.png](../assets/image_1624788800970_0.png) 
+  温克尔的第一个投影，以北纬50° 27′35″和南纬50° 27′35″为标准纬线
+### Winkel II
+- 该投影也发表于1921年，对等距圆柱投影和类似于摩尔维德投影的2:1椭圆投影进行了平均，但纬线间距相等，因此面积不相等(一些来源认为摩尔维德投影本身是基础投影)。
+- 得到的地图，也不是共形的，也不是等面积的，它的构造很像温克尔的第一次投影。
+- ![image.png](../assets/image_1624788881361_0.png) 
+  Winkel II map
+##  HEALPix投影
+- HEALPix，Hierarchy Equal Area and isoLatitude Pixilization(górski等人，1999)，是一个标准和资源的集合，用于天文和宇宙学研究的大数据集的有效存储和处理。在覆盖地球周围一个概念性天球的离散点(“像素”)，卫星探测器探测进入的辐射，如伽马射线和宇宙微波背景；测量值保存在栅格中，以供进一步分析。
+- HEALPix定义了一族从天球到平面的混合间断伪圆柱投影。一个健康位图包括两个波瓣；在法线方向的每个波瓣中，利用兰伯特等面积圆柱投影将赤道带映射成正方形；使用重新缩放的、间断形式的克里格农投影，极区被映射到两个等腰直角三角形。边界平行，约41° 48′37″；选择n和S是为了使三角形区域覆盖总面积的1/3。
+- 对于一个特殊情况，当H = 2并且去掉赤道带时，结果是一个在两个正方形中的间断的Collignon映射。一般来说，改变H会影响未缩放的纵横比(很像兰伯特投影的变化)和最小形状失真的平行度；最常见的情况是，H = 4，可以像多面体投影一样简单地折叠成立方体。
+- 整个地图可以分成3H个相同的面，每个面都是一个有垂直和水平对角线的正方形；一个小平面沿着与中央子午线相对的边界被分割，但这可以通过将一半移动到地图的另一侧来固定，使所有小平面整体处于人字形布局中。此外，每个面可以递归地分成4个较小的正方形。这种层次结构允许在不同的细节层次上进行数据处理。最后一级，像素也是水平和垂直对角线的正方形；这种非正统的取向可以通过将整个地图旋转45度的技巧来固定。由于整体结果是等面积的，因此栅格计算会产生一致的结果。伪圆柱特性提供了沿平行线的均匀像素分布。大数据集的另一个有利特征是相邻像素的数量和位置易于预测。
+- HEALPix投影的变体包括进一步的重新缩放。例如，当H = 6时，拉伸使三角形等边；这就形成了6H个三角形面，每个面可以细分为4个更小的三角形；像素同样是三角形的。对于H = 3，反向拉伸创建3个六边形刻面，在一些用于在相邻刻面之间共享片段的技巧之后，可以对其进行细分。
+### HEALPix投影的世界地图
+- 尽管HEALPix的主要目的不是制图，但将其投影用于世界地图显示了一些有趣的属性。这张H = 2的HEALPix贴图有绿色标记的小平面边缘。每个小平面可以进一步细分为更小的正方形。
+- ![image.png](../assets/image_1624789119315_0.png)
+- ![image.png](../assets/image_1624789132725_0.png) 
+  H = 4的HEALPix映射。与上面的地图相比，刻面仍然是正方形，但整体纵横比不同。
+- ![image.png](../assets/image_1624789162930_0.png) 
+  H=6的HEALPix地图，为了显示等边三角形的切面，重新进行了缩放。每个切面可以被细分为四个三角形。
